--- a/Clash-RC-2-1.0/app1/templates/app1/register.html
+++ b/Clash-RC-2-1.0/app1/templates/app1/register.html
@@ -1,8 +1,9 @@
 {% extends 'app1/base.html' %}
 
 {% block "codeblock" %}
+<h2>Prasad@123</h2>
 <section class="vh-100 bg-image"
-    style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+    
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
         <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
