--- a/Clash-RC-2-1.0/app1/templates/app1/home.html
+++ b/Clash-RC-2-1.0/app1/templates/app1/home.html
@@ -10,7 +10,7 @@
     {% endfor %}
 </div>
 <section>
-    <h1>{{user.username}}</h1>
+    <h1>{{user.username}}</h1> &nbsp; <a href="logout"><button>Logout</button></a>
     <h1>information and rules of game</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi odio beatae, consectetur aliquam harum at vero natus, totam explicabo sint ratione eaque quibusdam saepe distinctio. Laboriosam eligendi exercitationem nostrum numquam.</p>
 </section>
