--- a/Clash-RC-2-1.0/app1/templates/app1/question.html
+++ b/Clash-RC-2-1.0/app1/templates/app1/question.html
@@ -28,4 +28,10 @@
         <span>Memmory limit</span>{{question.q_memory_limit}}
     </div>
 </div>
+<div class="testip">
+    <form action="" method="POST">
+        <textarea name="testip" id="testip" cols="30" rows="10"></textarea>
+        <button onclick="gettestop()">Get</button>
+    </form>
+</div>
 {% endblock "codeblock" %}
