--- a/Clash-RC-2-1.0/app1/templates/app1/base.html
+++ b/Clash-RC-2-1.0/app1/templates/app1/base.html
@@ -8,10 +8,16 @@
     
     <link rel="stylesheet" type="text/css" href="{% static 'app1/css/questions.css' %}" >
 
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     {% comment %} exeption {% endcomment %}
     <link rel="stylesheet" href="{% static 'app1/css/bootstrap.css' %}">   
 
     <title>{% block "title" %}{% endblock "title" %}</title>
+    {% comment %} <title>{{title}}</title> {% endcomment %}
 
 
 
