--- a/Clash-RC-2-1.0/app1/templates/app1/login.html
+++ b/Clash-RC-2-1.0/app1/templates/app1/login.html
@@ -1,7 +1,7 @@
 {% extends 'app1/base.html' %}
 
 {% block "codeblock" %}
-<form method="post">
+<form method="POST">
     {% csrf_token %}
     <section class="vh-100 gradient-custom">
         <div class="container py-5 h-100">
@@ -14,16 +14,18 @@
 
                                 <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
                                 <p class="text-white-50 mb-5">Please enter your username and password!</p>
+                                
 
                                 <div class="form-outline form-white mb-4">
                                     <input type="text" id="typeEmailX" class="form-control form-control-lg"
-                                        name="username" />
+                                        name="username" placeholder="player"   required/>
                                     <label class="form-label" for="typeEmailX">Username</label>
                                 </div>
 
+
                                 <div class="form-outline form-white mb-4">
                                     <input type="password" id="typePasswordX" class="form-control form-control-lg"
-                                        name="password" />
+                                        name="password" required/>
                                     <label class="form-label" for="typePasswordX">Password</label>
                                 </div>
 
@@ -49,4 +51,25 @@
         </div>
     </section>
 </form>
+
+<script>
+
+document.getElementById('team_select').onchange = function() {
+    // console.log(this.value)
+    var element_id = document.getElementById("extra_user")
+    if (this.value === "2" ){
+        console.log("team username")
+        element_id.classList.toggle("hide");
+        if (element_id.style.display === "none"){
+            element_id.style.display = "";
+        }
+    }
+    else{
+            element_id.style.display = "none";
+    }
+}    
+    
+</script>
+
+
 {% endblock "codeblock" %}
