--- a/Clash_RC_2/app1/templates/app1/base.html
+++ b/Clash_RC_2/app1/templates/app1/base.html
@@ -27,15 +27,18 @@
 
 </head>
 <body>
+  {% for message in messages %}
+  <div class="alert alert-danger"><h2>{{message}}</h2></div>
+  {% endfor %}
     {% block "codeblock" %}{% endblock "codeblock" %}
 
 
 
 
-    {% include "app1\ajax\ajax.html" %}
-
+    {% comment %} {% include "app1\ajax\ajax.html" %} {% endcomment %}
+{% comment %} 
     <script src="{% static 'app1/js/jquery.js' %}"></script>
     <script src="{% static 'app1/js/popper.js' %}"></script>
-    <script src="{% static 'app1/js/bootstrap.js' %}"></script>
+    <script src="{% static 'app1/js/bootstrap.js' %}"></script>  {% endcomment %}
 </body>
 </html>
