--- a/Clash_RC_2/app1/templates/app1/question.html
+++ b/Clash_RC_2/app1/templates/app1/question.html
@@ -2,8 +2,7 @@
 {% load static %}
 {% block "codeblock" %}
 
-
-
+<div class="container">
 <div class="box">
     <!-- <div class="main-wrapper" , style="text-align: center;">
         <div class="main-heading">{{question.q_title}}</div>
@@ -47,8 +46,8 @@
         <textarea name="test_ip" id="testip" cols="30" rows="5" placeholder="Input">{{question.q_sip}}</textarea>
         <textarea name="test_op" id="testop" cols="30" rows="5" placeholder="Output">{{question.q_sop}}</textarea>
 
-        <input type="button" value="Run" id="run_code">    
-        <input type="button" value="Submit" id="submit_code" >    
+        <input type="button" value="Run" id="run_code" class="btn btn-primary" >    
+        <input type="button" value="Submit" id="submit_code" class="btn btn-primary" >    
         
         {% comment %} <input type="Submit" value="Submit" onclick="location.href='/question_sub/{{question.q_id}}'">  {% endcomment %}
     </form>
@@ -56,7 +55,7 @@
         <span id="actual_pass"></span>/<span id="original_pass"></span>
     </div>
 </div>
-
+</div>
 <script src="{% static 'app1/js/jquery.js' %}"></script>
 <script src="{% static 'app1/js/popper.js' %}"></script> 
 <script src="{% static 'app1/js/bootstrap.js' %}"></script>
