--- a/Clash_RC_2/app1/templates/app1/questions.html
+++ b/Clash_RC_2/app1/templates/app1/questions.html
@@ -3,6 +3,15 @@
 
 <h1>{{player.username}}</h1>
 
+<div class="navbar-brand navvi timer" href="#" style="margin-left: 20px;">
+  <div class="timer_container">
+      <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown">
+          <span id="minutes" class="timeritems"></span> :
+          <span id="seconds" class="timeritems"></span>
+      </div>
+    </div>                     
+</div>
+
 <div class="container d-flex flex-wrap justify-content-between">
 {% for question in questions %}
     
@@ -19,5 +28,36 @@
       </div>
 {% endfor %}
 </div>
+
+<script>
+  x = setInterval(function() {    
+      
+      const countDown = new Date('{{end_time}}').getTime();
+          const now = new Date().getTime();
+          ms = countDown - now;
+          let seconds = Math.floor((ms / 1000) % 60);
+          let minutes = Math.floor((ms / (1000 * 60)) % 60);
+          document.getElementById("minutes").innerText = minutes;
+          if (seconds<10 ){
+              document.getElementById("seconds").innerText =  "0"+seconds ;
+          }else{
+              document.getElementById("seconds").innerText = seconds ;
+          }
+        if (ms < 0) {
+          const radioInputs = document.querySelectorAll('input[type="radio"]');
+          radioInputs.forEach((input) => {
+          input.required = false;
+          
+          });
+          document.getElementById("minutes").innerText = 0;
+          document.getElementById("seconds").innerText = 0;
+          // var sub_btn = document.getElementById("submit_btn");
+          // sub_btn.name = "nsubmit";
+          // sub_btn.click();
+          location.href = "{% url 'leaderboard' %}"
+          clearInterval(x);
+        }
+      },0)
+  </script>
 
 {% endblock "codeblock" %}
