--- a/Clash_RC_2/app1/templates/app1/result.html
+++ b/Clash_RC_2/app1/templates/app1/result.html
@@ -1,4 +1,4 @@
-{% extends 'app1\base.html' %}
+{% extends 'app1/base.html' %}
 {% block "title" %}{{title}}{% endblock "title" %}
 {% block "codeblock" %}
 
