push after lolwani kand

--- a/Clash_RC_2/app1/templates/app1/codingPage.html
+++ b/Clash_RC_2/app1/templates/app1/codingPage.html
@@ -22,12 +22,12 @@
 <section class="head-strip">
          <!-- Question numbers -->
    <div class="questions ">
-     <div class="queno"><button type="button  "class=" btn  btn-dark" id="qbtn">1</button></div>
-     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn">2</button></div>
-     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn">3</button></div>
-     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn">4</button></div>
-     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn">5</button></div>
-     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn">6</button></div>
+     <div class="queno"><button type="button  "class=" btn  btn-dark" id="qbtn" onclick="location.href='/question/1'">1</button></div>
+     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn" onclick="location.href='/question/2'">2</button></div>
+     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn" onclick="location.href='/question/3'">3</button></div>
+     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn" onclick="location.href='/question/4'">4</button></div>
+     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn" onclick="location.href='/question/5'">5</button></div>
+     <div class="queno"><button type="button " class=" btn btn-dark   " id="qbtn" onclick="location.href='/question/6'">6</button></div>
     
    </div>
         <!-- Score  -->
