--- a/Clash_RC_2/app1/templates/app1/result.html
+++ b/Clash_RC_2/app1/templates/app1/result.html
@@ -1,33 +1,113 @@
-{% extends 'app1/base.html' %}
-{% block "title" %}{{title}}{% endblock "title" %}
-{% block "codeblock" %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+    <head>
+    <meta charset="utf-8" />
+    <meta name="Shreya Aman" content="Leaderboard" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous"/>
 
+        <link rel="stylesheet" type="text/css" href="{% static 'app1/css/leaderboard.css' %}"> 
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
+        <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css"> -->
 
-<div class="container">
-    <h2>Leaderboard</h2>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Place</th>
-          <th>Users</th>
-          <th>Score</th>
-          <th>Attempted</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for team in teams %}
+      </head>
+      <body>
+            <!-- Navbar goes here -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Profile</a>
+                    </li>
+        
+                    <li class="nav-item">
+                      <a class="nav-link disabled">Logout</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+      
+
+        <table id="example" class="display" style="width:85%">
+            <thead>
+            <tr>
+                <th>Rank</th>
+                <th>Username</th>
+                <th>Q1</th>
+                <th>Q2</th>
+                <th>Q3</th>
+                <th>Q4</th>
+                <th>Score</th>
+            </tr>
+            </thead>
+            <tbody>
+              
+            {% for team in teams %}
             <tr>
                 <td>{{team.place}}</td>
-                <td>{{team.user1}} {% if "user2" in team %}and {{team.user2}}{% endif %}
-                </td>
-                <td>{{team.score}} </td>
+                <td>{{team.user1}} {% if "user2" in team %}and {{team.user2}}{% endif %}</td>
                 <td>{{team.attempted_question}} </td>
-
+                <td>{{team.attempted_question}} </td>
+                <td>{{team.attempted_question}} </td>
+                <td>{{team.attempted_question}} </td>
+                <!-- <td>{{team.attempted_question}} </td> -->
+                <td>{{team.score}}</td>
             </tr>
         {% endfor %}
+        </table>
 
-      </tbody>
-    </table>
-  </div>
+<!-- Footer goes here -->
+  <footer class="text-center fixed-bottom bg-light">
+    <div class="container-fluid">
+      <div class="footer-text pt-3 pb-4">PISB <span>&copy</span></div>
+    </div>
+  </footer>
 
-{% endblock "codeblock" %}
+
+  <!-- <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+
+{% comment %} <--For fetching backend data --> {% endcomment %}
+      <script>
+        $(document).ready(function() {
+            $('#example').DataTable();
+        });
+        $(document).on('submit', '#search-form', function(e) {
+            e.preventDefault();
+            $.ajax({
+            type: 'GET',
+            url: '/Team/',
+            data: $(this).serialize(),
+            success: function(data) {
+                $('#example tbody').html(data);
+                $('#example').DataTable();
+            }
+            });
+        });
+      </script> 
+</body>
+</html>
