--- a/Clash_RC_2/app1/templates/app1/QuestionHub.html
+++ b/Clash_RC_2/app1/templates/app1/QuestionHub.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="{% static 'app1/css/QuestionHub.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    {% comment %} <link rel="stylesheet" href="style.css"> {% endcomment %}
     </head>
 
-    <body class="body1">
+    <body class="body1" data-my-objects="{{ questions| safe}}">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -58,8 +58,23 @@
         </div>
         <div class="space">
             <tbody>
+                {% for question in questions %}
+                <tr>
+                    <td>{{question.id}}</td>
+                    <td>{{question.questionTitle}}</td>
+                    <td>{{question.questionSubmissions}}</td>
+                    <td>
+                        <div class="progress" style="height: 25px;">
+                        <div class="progress-bar" role="progressbar" style="width: {{question.questionAccuracy}}%;" aria-valuenow="{{question.questionAccuracy}}" aria-valuemin="0" aria-valuemax="100">{{question.questionAccuracy}}%</div>
+                        </div>
+                    </td>
+                    <td>
+                        <button type="button" class="btn  btn-sm  {% if question.playerIsAttempted %}btn-success{% else %}btn-primary{% endif %}" data-bs-toggle="modal" data-bs-target="#myModal">  <a href="{{question.id}}">VIEW</a>  </button>
+                    </td>
+                    </tr>
+                    {% endfor %}
             
-            
+                    
 
             <!--  the code is writen using the java scrip  by mappig technique  -->
         </tbody>
@@ -76,9 +91,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-        <script src="{% static 'app1/js/QuestionHub.js' %}"></script>
-
+        
         <!-- <script src="QuestionHub.js"></script> -->
+        <!-- <script src="{% static 'app1/js/QuestionHub.js' %}"></script> -->
+        <script>
+        console.log("{{questions|safe}}")
+        </script>
+        
+
     </body>
 
     </html>
